[package]
name = "mymy"
version = "0.1.0"
edition = "2021"
authors = ["Théo Crevon <theo@crevon.me>"]
description = "Access the most common information about your system using a single command"
readme = "README.md"
homepage = "https://github.com/oleiade/mymy"
repository = "https://github.com/oleiade/mymy"
keywords = ["cli", "network", "time"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[[bin]]
name = "my"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
chrono = { default-features = false, version = "0.4.24" }
clap = { version = "4.2.1", features = ["std", "derive"], default-features = false }
get_if_addrs = "0.5.3"
hostname = "0.3.1"
icmp-socket = "0.2.0"
local-ip-address = "0.5.1"
rsntp = "3.0.2"
serde = { version = "1.0.159", features = ["derive"], default-features = false }
serde_json = "1.0.95"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
trust-dns-resolver = { version = "0.22.0", features = ["tokio-runtime", "system-config"], default-features = false }
whoami = { default-features = false, version = "1.4.0" }
