[package]
name = "mymy"
version = "0.3.0"
edition = "2021"
authors = ["Théo Crevon <theo@crevon.me>"]
description = "Access the most common information about your system using a single command"
readme = "README.md"
homepage = "https://github.com/oleiade/mymy"
repository = "https://github.com/oleiade/mymy"
keywords = ["cli", "network", "time"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[profile.release]
debug = 1
incremental = true
lto = "off"

[[bin]]
name = "my"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
get_if_addrs = "0.5.3"
human-panic = "1.1.4"
itertools = "0.10.5"
local-ip-address = "0.5.1"
rsntp = "3.0.2"
serde_json = "1.0.95"
surge-ping = "0.8.0"
sysinfo = "0.28.4"

[dependencies.chrono]
version = "0.4.24"
default-features = false

[dependencies.clap]
version = "4.2.1"
features = ["derive"]

[dependencies.serde]
version = "1.0.159"
features = ["serde_derive"]
default-features = false

[dependencies.tokio]
version = "1.27.0"
default-features = false
features = ["macros"]

[dependencies.trust-dns-resolver]
version = "0.22.0"
features = ["tokio-runtime", "system-config"]
default-features = false

[dependencies.whoami]
version = "1.4.0"
default-features = false

[package.metadata.deb]
section = "main"

[package.metadata.rpm]
package = "mymy"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
mymy = { path = "/usr/bin/mymy" }
