[package]
name = "mymy"
version = "0.3.0"
edition = "2024"
authors = ["Théo Crevon <theo@crevon.me>"]
description = "Access the most common information about your system using a single command"
readme = "README.md"
homepage = "https://github.com/oleiade/mymy"
repository = "https://github.com/oleiade/mymy"
keywords = ["cli", "network", "time"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[profile.release]
debug = 1
incremental = true
lto = "off"

[[bin]]
name = "my"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
hickory-proto = "0.25"
human-panic = "2.0.2"
itertools = "0.14.0"
local-ip-address = "0.6.5"
rsntp = "4.0.0"
serde_json = "1.0.140"
sysinfo = "0.37.0"

[dependencies.chrono]
version = "0.4.41"
default-features = false

[dependencies.clap]
version = "4.5.38"
features = ["derive"]

[dependencies.serde]
version = "1.0.219"
features = ["serde_derive"]
default-features = false

[dependencies.tokio]
version = "1.45.0"
default-features = false
features = ["macros"]

[dependencies.hickory-resolver]
version = "0.25.2"

[dependencies.whoami]
version = "2.0.0"
default-features = false

[package.metadata.deb]
section = "main"

[package.metadata.rpm]
package = "mymy"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
mymy = { path = "/usr/bin/mymy" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
